Changed the structure of model classes