@@ -2,7 +2,9 @@ package org.wso2.siddhi.extension.var.realtime;
 
 import org.json.JSONObject;
 import org.wso2.siddhi.extension.var.models.Asset;
+import org.wso2.siddhi.extension.var.models.AssetFactory;
 import org.wso2.siddhi.extension.var.models.Portfolio;
+import org.wso2.siddhi.extension.var.models.PortfolioFactory;
 
 import java.util.*;
 
@@ -10,15 +12,18 @@ import java.util.*;
  * Created by dilini92 on 6/26/16.
  */
 public abstract class VaRPortfolioCalc {
-    protected double confidenceInterval = 0.95;
-    protected int batchSize;
+    private double confidenceInterval = 0.95;
+    private int batchSize;
 
     private Map<Integer, Portfolio> portfolioList;
-    protected Map<String, Asset> assetList; // this is public because it is used in VarModelAssertion for backtesting
-    protected double price;
-    protected String symbol;
-    protected int portfolioID;
-    protected int shares;
+    private Map<String, Asset> assetList; // this is public because it is used in VarModelAssertion for backtesting
+
+    private String type;
+
+    private double price;
+    private String symbol;
+    private int portfolioID;
+    private int shares;
 
     /**
      * @param limit
@@ -31,15 +36,6 @@ public abstract class VaRPortfolioCalc {
         //ensures that there will be only one instance of each
         portfolioList = new HashMap<>();
         assetList = new HashMap<>();
-    }
-
-    /**
-     * for testing purposes
-     *
-     * @param assetList
-     */
-    public void setAssetList(Map<String, Asset> assetList) {
-        this.assetList = assetList;
     }
 
     /**
@@ -65,11 +61,14 @@ public abstract class VaRPortfolioCalc {
     protected void updateAssetPool(){       //double check protected access
         double priceBeforeLastPrice;
 
+        if(this instanceof HistoricalVaRCalculator){
+
+        }
         Asset temp = assetList.get(symbol);
         if(temp == null) {
-            assetList.put(symbol, new Asset());
+            assetList.put(symbol, AssetFactory.getAsset(type));
             temp = assetList.get(symbol);
-            temp.setReturnValueSet(batchSize);
+            temp.setReturnValueSet(batchSize - 1);
         }
 
         priceBeforeLastPrice = temp.getCurrentStockPrice();
@@ -79,7 +78,7 @@ public abstract class VaRPortfolioCalc {
         //assume that all price values of assets cannot be zero or negative
         if(priceBeforeLastPrice > 0) {
             double value = Math.log(price / priceBeforeLastPrice);
-            temp.addReturnValue(value);
+            temp.addReturnValue(value);                             /**if descriptive stat can be used, this is not required*/
             temp.getReturnValueSet().addValue(value);
         }
     }
@@ -90,13 +89,12 @@ public abstract class VaRPortfolioCalc {
         if(portfolio == null){//first time for the portfolio
             Map<String, Integer> assets = new HashMap<>();
             assets.put(symbol, shares);
-            portfolio = new Portfolio(portfolioID, assets);
+            portfolio = PortfolioFactory.getPortfolio(type, portfolioID, assets);
             portfolioList.put(portfolioID, portfolio);
-        }else if(portfolio.getAssets().get(symbol) == null){//first time for the asset within portfolio
+        }else if(portfolio.getCurrentShare(symbol) == null){//first time for the asset within portfolio
             portfolio.setCurrentShare(symbol, shares);
         }else{//portfolio exists, asset within portfolio exists
-            int currentShares = portfolio.getAssets().get(symbol);
-            portfolio.setPreviousShare(symbol, currentShares);
+            int currentShares = portfolio.getCurrentShare(symbol);
             portfolio.setCurrentShare(symbol, shares + currentShares);
         }
     }
@@ -108,9 +106,9 @@ public abstract class VaRPortfolioCalc {
      */
     public void removeEvent(String symbol) {
         LinkedList<Double> priceList = assetList.get(symbol).getLatestReturnValues();
-        priceList.remove(0);
+        priceList.removeFirst();
 
-        portfolioList.get(portfolioID).getAssets().remove(symbol);
+        portfolioList.get(portfolioID).removeAsset(symbol);
     }
 
     /**
@@ -133,8 +131,8 @@ public abstract class VaRPortfolioCalc {
 
         while(iterator.hasNext()){
             Portfolio portfolio = portfolioList.get(iterator.next());
-            Map<String, Integer> assets = portfolio.getAssets();
-            if(assets.get(symbol) != null && assetList.get(symbol).getNumberOfHistoricalValues() > 1){
+            Integer shares = portfolio.getCurrentShare(symbol);
+            if(shares != null && assetList.get(symbol).getNumberOfHistoricalValues() > 1){
                 Object temp = processData(portfolio);
                 if(temp != null){
                     var = Double.parseDouble(temp.toString());
@@ -149,9 +147,50 @@ public abstract class VaRPortfolioCalc {
         //if no var has been calculated
         if (result.length() == 0)
             return null;
+
         return result.toString();
     }
 
     public abstract double replaceAssetSimulation();
+
+    public String getType() {
+        return type;
+    }
+
+    public void setType(String type) {
+        this.type = type;
+    }
+
+    public double getConfidenceInterval() {
+        return confidenceInterval;
+    }
+
+    public int getBatchSize() {
+        return batchSize;
+    }
+
+    public Map<Integer, Portfolio> getPortfolioList() {
+        return portfolioList;
+    }
+
+    public Map<String, Asset> getAssetList() {
+        return assetList;
+    }
+
+    public String getSymbol() {
+        return symbol;
+    }
+
+    public int getPortfolioID() {
+        return portfolioID;
+    }
+
+    public int getShares() {
+        return shares;
+    }
+
+    public double getPrice(){
+        return price;
+    }
 }
 
